@@ -1,7 +1,7 @@
-$NetBSD: distinfo,v 1.12 2002/09/01 01:14:29 jonb Exp $
+$NetBSD: distinfo,v 1.13 2002/10/19 03:03:50 jlam Exp $
 
-SHA1 (postgresql-7.2.2.tar.gz) = 69ef43ef5d22d4ae675ff12e05d98e2be557e3f5
-Size (postgresql-7.2.2.tar.gz) = 9239158 bytes
+SHA1 (postgresql-7.2.3.tar.gz) = f98acadb3b06ea0f09f82857ca880ec198e3c791
+Size (postgresql-7.2.3.tar.gz) = 9244039 bytes
 SHA1 (patch-aa) = 598f14b74b0dc54680ed85f4c26b6396898f5a7e
 SHA1 (patch-ab) = 0d1dee0d7c8b3bbff8507e18b9561c0b198f409f
 SHA1 (patch-ac) = eaed6eaeb65e3bb394252c5cb97a306bffb3e503
